task1/bin/y.output
   0  $accept : s $end

<<<<<<< HEAD
   1  s : statements

   2  expr : expr PLUS expr
   3       | expr MINUS expr
   4       | expr MULTI expr
   5       | expr DIVISION expr
   6       | expr EQUAL expr
   7       | expr GREATER expr
   8       | expr GREATEREQUAL expr
   9       | expr LESS expr
  10       | expr LESSEQUAL expr
  11       | expr NOTEQUAL expr
  12       | expr AND expr
  13       | expr OR expr
  14       | NOT expr
  15       | Pexpr
  16       | consts
  17       | ASSIGNMENT_statement

  18  Pexpr : LEFTPAREN expr rightParen

  19  rightParen : RIGHTPAREN

  20  block_statements : LEFTBRACE statements rightbrace

  21  rightbrace : RIGHTBRACE

  22  consts : id
  23         | numbers

  24  id : ID

  25  numbers : INTEGER_NEG
  26          | INTEGER_POS

  27  statements_type : statements
  28                  | block_statements

  29  statements : IF_statements
  30             | LOOP_statements
  31             | IN.OUT_statements
  32             | BOOLEAN_statements
  33             | expr SEMICOLON

  34  BOOLEAN_statements : BOOLTRUE
  35                     | BOOLFALSE

  36  IF_statements : IF expr statements_type
  37                | IF expr statements_type else

  38  else : ELSE statements_type

  39  LOOP_statements : WHILE expr block_statements
  40                  | FOR expr block_statements
  41                  | DO block_statements WHILE expr
  42                  | WHILE expr statements
=======
   1  s : newline

   2  newline : expr SEMICOLON newline
   3          | expr SEMICOLON
   4          | SEMICOLON

   5  expr : expr PLUS expr
   6       | expr MINUS expr
   7       | expr MULTI expr
   8       | expr DIVISION expr
   9       | expr EQUAL expr
  10       | expr GREATER expr
  11       | expr GREATEREQUAL expr
  12       | expr LESS expr
  13       | expr LESSEQUAL expr
  14       | expr NOTEQUAL expr
  15       | expr AND expr
  16       | expr OR expr
  17       | NOT expr
  18       | Pexpr
  19       | consts
  20       | ASSIGNMENT_statement

  21  Pexpr : LEFTPAREN expr rightParen

  22  rightParen : RIGHTPAREN

  23  block_statements : LEFTBRACE statements rightbrace

  24  rightbrace : RIGHTBRACE

  25  consts : id
  26         | numbers

  27  id : ID

  28  numbers : INTEGER_NEG
  29          | INTEGER_POS

  30  statements : IF_statements
  31             | LOOP_statements
  32             | IN.OUT_statements
  33             | BOOLEAN_statements
  34             | expr

  35  BOOLEAN_statements : BOOLTRUE
  36                     | BOOLFALSE

  37  IF_statements : IF expr block_statements else
  38                | IF expr block_statements

  39  else : ELSE block_statements

  40  LOOP_statements : WHILE expr block_statements
  41                  | FOR expr block_statements
  42                  | DO block_statements WHILE expr
>>>>>>> master

  43  IN.OUT_statements :

  44  ASSIGNMENT_statement : id ASSIGNMENT expr

state 0
	$accept : . s $end  (0)
<<<<<<< HEAD
	IN.OUT_statements : .  (43)

	ID  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DO  shift 5
	BOOLTRUE  shift 6
	BOOLFALSE  shift 7
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	NOT  shift 10
	LEFTPAREN  shift 11
	$end  reduce 43

	s  goto 12
	statements  goto 13
	expr  goto 14
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
	IF_statements  goto 20
	LOOP_statements  goto 21
	IN.OUT_statements  goto 22
	BOOLEAN_statements  goto 23


state 1
	id : ID .  (24)

	.  reduce 24


state 2
	IF_statements : IF . expr statements_type  (36)
	IF_statements : IF . expr statements_type else  (37)

	ID  shift 1
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	NOT  shift 10
	LEFTPAREN  shift 11
	.  error
=======

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	SEMICOLON  shift 5
	LEFTPAREN  shift 6
	.  error

	s  goto 7
	newline  goto 8
	expr  goto 9
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14


state 1
	id : ID .  (27)

	.  reduce 27


state 2
	numbers : INTEGER_POS .  (29)
>>>>>>> master

	.  reduce 29


state 3
<<<<<<< HEAD
	LOOP_statements : WHILE . expr block_statements  (39)
	LOOP_statements : WHILE . expr statements  (42)

	ID  shift 1
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	NOT  shift 10
	LEFTPAREN  shift 11
	.  error
=======
	numbers : INTEGER_NEG .  (28)
>>>>>>> master

	.  reduce 28


state 4
<<<<<<< HEAD
	LOOP_statements : FOR . expr block_statements  (40)
=======
	expr : NOT . expr  (17)
>>>>>>> master

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

	expr  goto 15
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14


state 5
<<<<<<< HEAD
	LOOP_statements : DO . block_statements WHILE expr  (41)

	LEFTBRACE  shift 27
	.  error
=======
	newline : SEMICOLON .  (4)
>>>>>>> master

	.  reduce 4


state 6
<<<<<<< HEAD
	BOOLEAN_statements : BOOLTRUE .  (34)

	.  reduce 34


state 7
	BOOLEAN_statements : BOOLFALSE .  (35)

	.  reduce 35


state 8
	numbers : INTEGER_POS .  (26)

	.  reduce 26


state 9
	numbers : INTEGER_NEG .  (25)

	.  reduce 25


state 10
	expr : NOT . expr  (14)

	ID  shift 1
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	NOT  shift 10
	LEFTPAREN  shift 11
	.  error
=======
	Pexpr : LEFTPAREN . expr rightParen  (21)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

	expr  goto 16
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14


state 7
	$accept : s . $end  (0)

	$end  accept


state 8
	s : newline .  (1)

	.  reduce 1


state 9
	newline : expr . SEMICOLON newline  (2)
	newline : expr . SEMICOLON  (3)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTI expr  (7)
	expr : expr . DIVISION expr  (8)
	expr : expr . EQUAL expr  (9)
	expr : expr . GREATER expr  (10)
	expr : expr . GREATEREQUAL expr  (11)
	expr : expr . LESS expr  (12)
	expr : expr . LESSEQUAL expr  (13)
	expr : expr . NOTEQUAL expr  (14)
	expr : expr . AND expr  (15)
	expr : expr . OR expr  (16)

	AND  shift 17
	DIVISION  shift 18
	EQUAL  shift 19
	GREATER  shift 20
	GREATEREQUAL  shift 21
	LESS  shift 22
	LESSEQUAL  shift 23
	MINUS  shift 24
	NOTEQUAL  shift 25
	OR  shift 26
	PLUS  shift 27
	MULTI  shift 28
	SEMICOLON  shift 29
	.  error


state 10
	expr : Pexpr .  (18)
>>>>>>> master

	.  reduce 18


state 11
<<<<<<< HEAD
	Pexpr : LEFTPAREN . expr rightParen  (18)
=======
	expr : consts .  (19)
>>>>>>> master

	.  reduce 19


state 12
	expr : ASSIGNMENT_statement .  (20)

	.  reduce 20


state 13
	consts : id .  (25)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (44)

	ASSIGNMENT  shift 30
	AND  reduce 25
	DIVISION  reduce 25
	EQUAL  reduce 25
	GREATER  reduce 25
	GREATEREQUAL  reduce 25
	LESS  reduce 25
	LESSEQUAL  reduce 25
	MINUS  reduce 25
	NOTEQUAL  reduce 25
	OR  reduce 25
	PLUS  reduce 25
	MULTI  reduce 25
	SEMICOLON  reduce 25
	RIGHTPAREN  reduce 25


state 14
<<<<<<< HEAD
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	statements : expr . SEMICOLON  (33)

	AND  shift 31
	DIVISION  shift 32
	EQUAL  shift 33
	GREATER  shift 34
	GREATEREQUAL  shift 35
	LESS  shift 36
	LESSEQUAL  shift 37
	MINUS  shift 38
	NOTEQUAL  shift 39
	OR  shift 40
	PLUS  shift 41
	MULTI  shift 42
	SEMICOLON  shift 43
	.  error
=======
	consts : numbers .  (26)
>>>>>>> master

	.  reduce 26

<<<<<<< HEAD
state 15
	expr : Pexpr .  (15)

	.  reduce 15


state 16
	expr : consts .  (16)

	.  reduce 16


state 17
	expr : ASSIGNMENT_statement .  (17)

	.  reduce 17


state 18
	consts : id .  (22)
	ASSIGNMENT_statement : id . ASSIGNMENT expr  (44)

	ASSIGNMENT  shift 44
	$end  reduce 22
	ID  reduce 22
	IF  reduce 22
	ELSE  reduce 22
	WHILE  reduce 22
	FOR  reduce 22
	DO  reduce 22
	BOOLTRUE  reduce 22
	BOOLFALSE  reduce 22
	INTEGER_POS  reduce 22
	INTEGER_NEG  reduce 22
	AND  reduce 22
	DIVISION  reduce 22
	EQUAL  reduce 22
	GREATER  reduce 22
	GREATEREQUAL  reduce 22
	LESS  reduce 22
	LESSEQUAL  reduce 22
	MINUS  reduce 22
	NOT  reduce 22
	NOTEQUAL  reduce 22
	OR  reduce 22
	PLUS  reduce 22
	MULTI  reduce 22
	SEMICOLON  reduce 22
	LEFTBRACE  reduce 22
	RIGHTBRACE  reduce 22
	LEFTPAREN  reduce 22
	RIGHTPAREN  reduce 22


state 19
	consts : numbers .  (23)

	.  reduce 23


state 20
	statements : IF_statements .  (29)

	.  reduce 29


state 21
	statements : LOOP_statements .  (30)

	.  reduce 30


state 22
	statements : IN.OUT_statements .  (31)

	.  reduce 31


state 23
	statements : BOOLEAN_statements .  (32)

	.  reduce 32


state 24
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	IF_statements : IF expr . statements_type  (36)
	IF_statements : IF expr . statements_type else  (37)
	IN.OUT_statements : .  (43)

	ID  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DO  shift 5
	BOOLTRUE  shift 6
	BOOLFALSE  shift 7
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	AND  shift 31
	DIVISION  shift 32
	EQUAL  shift 33
	GREATER  shift 34
	GREATEREQUAL  shift 35
	LESS  shift 36
	LESSEQUAL  shift 37
	MINUS  shift 38
	NOT  shift 10
	NOTEQUAL  shift 39
	OR  shift 40
	PLUS  shift 41
	MULTI  shift 42
	LEFTBRACE  shift 27
	LEFTPAREN  shift 11
	$end  reduce 43
	ELSE  reduce 43
	RIGHTBRACE  reduce 43

	statements  goto 45
	expr  goto 14
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	block_statements  goto 46
	id  goto 18
	numbers  goto 19
	statements_type  goto 47
	IF_statements  goto 20
	LOOP_statements  goto 21
	IN.OUT_statements  goto 22
	BOOLEAN_statements  goto 23


state 25
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	LOOP_statements : WHILE expr . block_statements  (39)
	LOOP_statements : WHILE expr . statements  (42)
	IN.OUT_statements : .  (43)

	ID  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DO  shift 5
	BOOLTRUE  shift 6
	BOOLFALSE  shift 7
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	AND  shift 31
	DIVISION  shift 32
	EQUAL  shift 33
	GREATER  shift 34
	GREATEREQUAL  shift 35
	LESS  shift 36
	LESSEQUAL  shift 37
	MINUS  shift 38
	NOT  shift 10
	NOTEQUAL  shift 39
	OR  shift 40
	PLUS  shift 41
	MULTI  shift 42
	LEFTBRACE  shift 27
	LEFTPAREN  shift 11
	$end  reduce 43
	ELSE  reduce 43
	RIGHTBRACE  reduce 43

	statements  goto 48
	expr  goto 14
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	block_statements  goto 49
	id  goto 18
	numbers  goto 19
	IF_statements  goto 20
	LOOP_statements  goto 21
	IN.OUT_statements  goto 22
	BOOLEAN_statements  goto 23


state 26
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	LOOP_statements : FOR expr . block_statements  (40)

	AND  shift 31
	DIVISION  shift 32
	EQUAL  shift 33
	GREATER  shift 34
	GREATEREQUAL  shift 35
	LESS  shift 36
	LESSEQUAL  shift 37
	MINUS  shift 38
	NOTEQUAL  shift 39
	OR  shift 40
	PLUS  shift 41
	MULTI  shift 42
	LEFTBRACE  shift 27
	.  error

	block_statements  goto 50


state 27
	block_statements : LEFTBRACE . statements rightbrace  (20)
	IN.OUT_statements : .  (43)

	ID  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DO  shift 5
	BOOLTRUE  shift 6
	BOOLFALSE  shift 7
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	NOT  shift 10
	LEFTPAREN  shift 11
	RIGHTBRACE  reduce 43

	statements  goto 51
	expr  goto 14
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
	IF_statements  goto 20
	LOOP_statements  goto 21
	IN.OUT_statements  goto 22
	BOOLEAN_statements  goto 23


state 28
	LOOP_statements : DO block_statements . WHILE expr  (41)

	WHILE  shift 52
	.  error


state 29
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : NOT expr .  (14)

	AND  shift 31
	DIVISION  shift 32
	EQUAL  shift 33
	GREATER  shift 34
	GREATEREQUAL  shift 35
	LESS  shift 36
	LESSEQUAL  shift 37
	MINUS  shift 38
	NOTEQUAL  shift 39
	OR  shift 40
	PLUS  shift 41
	MULTI  shift 42
	$end  reduce 14
	ID  reduce 14
	IF  reduce 14
	ELSE  reduce 14
	WHILE  reduce 14
	FOR  reduce 14
	DO  reduce 14
	BOOLTRUE  reduce 14
	BOOLFALSE  reduce 14
	INTEGER_POS  reduce 14
	INTEGER_NEG  reduce 14
	NOT  reduce 14
	SEMICOLON  reduce 14
	LEFTBRACE  reduce 14
	RIGHTBRACE  reduce 14
	LEFTPAREN  reduce 14
	RIGHTPAREN  reduce 14


state 30
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	Pexpr : LEFTPAREN expr . rightParen  (18)

	AND  shift 31
	DIVISION  shift 32
	EQUAL  shift 33
	GREATER  shift 34
	GREATEREQUAL  shift 35
	LESS  shift 36
	LESSEQUAL  shift 37
	MINUS  shift 38
	NOTEQUAL  shift 39
	OR  shift 40
	PLUS  shift 41
	MULTI  shift 42
	RIGHTPAREN  shift 53
	.  error

	rightParen  goto 54
=======

state 15
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTI expr  (7)
	expr : expr . DIVISION expr  (8)
	expr : expr . EQUAL expr  (9)
	expr : expr . GREATER expr  (10)
	expr : expr . GREATEREQUAL expr  (11)
	expr : expr . LESS expr  (12)
	expr : expr . LESSEQUAL expr  (13)
	expr : expr . NOTEQUAL expr  (14)
	expr : expr . AND expr  (15)
	expr : expr . OR expr  (16)
	expr : NOT expr .  (17)

	AND  shift 17
	DIVISION  shift 18
	EQUAL  shift 19
	GREATER  shift 20
	GREATEREQUAL  shift 21
	LESS  shift 22
	LESSEQUAL  shift 23
	MINUS  shift 24
	NOTEQUAL  shift 25
	OR  shift 26
	PLUS  shift 27
	MULTI  shift 28
	SEMICOLON  reduce 17
	RIGHTPAREN  reduce 17


state 16
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULTI expr  (7)
	expr : expr . DIVISION expr  (8)
	expr : expr . EQUAL expr  (9)
	expr : expr . GREATER expr  (10)
	expr : expr . GREATEREQUAL expr  (11)
	expr : expr . LESS expr  (12)
	expr : expr . LESSEQUAL expr  (13)
	expr : expr . NOTEQUAL expr  (14)
	expr : expr . AND expr  (15)
	expr : expr . OR expr  (16)
	Pexpr : LEFTPAREN expr . rightParen  (21)

	AND  shift 17
	DIVISION  shift 18
	EQUAL  shift 19
	GREATER  shift 20
	GREATEREQUAL  shift 21
	LESS  shift 22
	LESSEQUAL  shift 23
	MINUS  shift 24
	NOTEQUAL  shift 25
	OR  shift 26
	PLUS  shift 27
	MULTI  shift 28
	RIGHTPAREN  shift 31
	.  error

	rightParen  goto 32
>>>>>>> master


state 17
	expr : expr AND . expr  (15)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 55
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 33
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 18
	expr : expr DIVISION . expr  (8)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 56
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 34
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 19
	expr : expr EQUAL . expr  (9)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 57
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 35
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 20
	expr : expr GREATER . expr  (10)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 58
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 36
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 21
	expr : expr GREATEREQUAL . expr  (11)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 59
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 37
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 22
	expr : expr LESS . expr  (12)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 60
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 38
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 23
	expr : expr LESSEQUAL . expr  (13)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 61
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 39
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 24
	expr : expr MINUS . expr  (6)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 62
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 40
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 25
	expr : expr NOTEQUAL . expr  (14)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 63
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 41
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 26
	expr : expr OR . expr  (16)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 64
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 42
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 27
	expr : expr PLUS . expr  (5)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 65
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19
=======
	expr  goto 43
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14
>>>>>>> master


state 28
	expr : expr MULTI . expr  (7)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 66
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19


state 43
	statements : expr SEMICOLON .  (33)

	.  reduce 33


state 44
	ASSIGNMENT_statement : id ASSIGNMENT . expr  (44)

	ID  shift 1
	INTEGER_POS  shift 8
	INTEGER_NEG  shift 9
	NOT  shift 10
	LEFTPAREN  shift 11
	.  error

	expr  goto 67
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19


state 45
	statements_type : statements .  (27)

	.  reduce 27


state 46
	statements_type : block_statements .  (28)

	.  reduce 28


state 47
	IF_statements : IF expr statements_type .  (36)
	IF_statements : IF expr statements_type . else  (37)

	ELSE  shift 68
	$end  reduce 36
	RIGHTBRACE  reduce 36

	else  goto 69


state 48
	LOOP_statements : WHILE expr statements .  (42)

	.  reduce 42


state 49
	LOOP_statements : WHILE expr block_statements .  (39)

	.  reduce 39


state 50
	LOOP_statements : FOR expr block_statements .  (40)

	.  reduce 40


state 51
	block_statements : LEFTBRACE statements . rightbrace  (20)

	RIGHTBRACE  shift 70
	.  error

	rightbrace  goto 71


state 52
	LOOP_statements : DO block_statements WHILE . expr  (41)
=======
	expr  goto 44
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14


state 29
	newline : expr SEMICOLON . newline  (2)
	newline : expr SEMICOLON .  (3)

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	SEMICOLON  shift 5
	LEFTPAREN  shift 6
	$end  reduce 3

	newline  goto 45
	expr  goto 9
	Pexpr  goto 10
	consts  goto 11
	ASSIGNMENT_statement  goto 12
	id  goto 13
	numbers  goto 14


state 30
	ASSIGNMENT_statement : id ASSIGNMENT . expr  (44)
>>>>>>> master

	ID  shift 1
	INTEGER_POS  shift 2
	INTEGER_NEG  shift 3
	NOT  shift 4
	LEFTPAREN  shift 6
	.  error

<<<<<<< HEAD
	expr  goto 72
	Pexpr  goto 15
	consts  goto 16
	ASSIGNMENT_statement  goto 17
	id  goto 18
	numbers  goto 19


state 53
	rightParen : RIGHTPAREN .  (19)

	.  reduce 19


state 54
	Pexpr : LEFTPAREN expr rightParen .  (18)

	.  reduce 18


state 55
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr AND expr .  (12)
	expr : expr . OR expr  (13)

	DIVISION  shift 32
	MULTI  shift 42
	$end  reduce 12
	ID  reduce 12
	IF  reduce 12
	ELSE  reduce 12
	WHILE  reduce 12
	FOR  reduce 12
	DO  reduce 12
	BOOLTRUE  reduce 12
	BOOLFALSE  reduce 12
	INTEGER_POS  reduce 12
	INTEGER_NEG  reduce 12
	AND  reduce 12
	EQUAL  reduce 12
	GREATER  reduce 12
	GREATEREQUAL  reduce 12
	LESS  reduce 12
	LESSEQUAL  reduce 12
	MINUS  reduce 12
	NOT  reduce 12
	NOTEQUAL  reduce 12
	OR  reduce 12
	PLUS  reduce 12
	SEMICOLON  reduce 12
	LEFTBRACE  reduce 12
	RIGHTBRACE  reduce 12
	LEFTPAREN  reduce 12
	RIGHTPAREN  reduce 12


state 56
	expr : expr . PLUS expr  (2)
	expr : expr . MINUS expr  (3)
	expr : expr . MULTI expr  (4)
	expr : expr . DIVISION expr  (5)
	expr : expr DIVISION expr .  (5)
	expr : expr . EQUAL expr  (6)
	expr : expr . GREATER expr  (7)
	expr : expr . GREATEREQUAL expr  (8)
	expr : expr . LESS expr  (9)
	expr : expr . LESSEQUAL expr  (10)
	expr : expr . NOTEQUAL expr  (11)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)

	.  reduce 5

